# ChangeLog for dev-util/ohcount
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  ohcount-9999.ebuild:
  dev-util/ohcount-9999 keyworded

*ohcount-9999 (14 Aug 2009)

  14 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  +ohcount-9999.ebuild:
  added live ebuild

  22 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net> +metadata.xml:
  removed live version and added latest

  16 Apr 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
  -ohcount-1.0.0.ebuild, +ohcount-2.0.1.ebuild, -ohcount-9999.ebuild:
  Initial checkin to sunrise
  bug 209908