@@ -1,5 +1,5 @@
 DIST ohcount-2.0.1.tar.gz 267869 RMD160 95dcb6ca0ca9e428347ce469fa488db98bb31a7e SHA1 c420e826007276487f95a18b79c7f88234775f72 SHA256 11710a0e85cef144cb210ffee6838d7044432c3405814779b025d5ded29c9840
 EBUILD ohcount-2.0.1.ebuild 1112 RMD160 03661448333def3a955f32a46c3c3d751fbfcf6c SHA1 b17e65dac8f545d255beefcfbb5a7bca3468e9c1 SHA256 97f5c9813429494ba89def01fcc4e9b154bfdec3ff7152929249b818efc5388a
-EBUILD ohcount-9999.ebuild 598 RMD160 d78fbc88a4fbf6075d9fcf6fa6c168c653cd58a1 SHA1 bba96cdacf951671c25bfb83a0b9497e3c515528 SHA256 9b4c4be2d83aad355f03052c6dba93366b37c525825995ed6ccc8772822e7fed
-MISC ChangeLog 645 RMD160 7f0b1f9e3a26b93017c6ec67efe0225064453444 SHA1 609a5c4b954da3298bdb15ff3fb288b969e3d25e SHA256 f40ea96840f30870e7d20de2e282beb22547f02b7756241d97bfcbda9ce83f47
+EBUILD ohcount-9999.ebuild 595 RMD160 756a165b833b2540f75db49e554fb003de20b7f9 SHA1 b27cafc6d04ba5ac4ac029d1b28273cdfee35e62 SHA256 336c1d02aaad094d511d1b96f5585c3e5fd2f5593edb7e1d2fef1eebea94b818
+MISC ChangeLog 762 RMD160 8cc0090ccd5f6c15c82634cbbff3250aede7c667 SHA1 e85401f3ce7bda6a4209f048b5a35b5826f994e2 SHA256 3f36f8c82f0c274cac6f5b2bdf6478e587ef566fb8159d7f2019e81b59fdf91b
 MISC metadata.xml 409 RMD160 bdf2d69f7916734482cece009cc6bea24336ff98 SHA1 d9659c883b769dfdbe6acb2b73a8167cae7bb004 SHA256 a6ef4b5906f89906f6fce1dd3181e550790927081b9b6c9424a3ec44331d708b
