@@ -4,6 +4,10 @@
 
   14 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
   ohcount-9999.ebuild:
+  dev-util/ohcount-9999 heal_ebuild
+
+  14 Aug 2009; Justin Lecher (jlec) <jlec@j-schmitz.net>
+  ohcount-9999.ebuild:
   dev-util/ohcount-9999 keyworded
 
 *ohcount-9999 (14 Aug 2009)
